; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_type.c_aggregate_item_field_type_from_name.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_type.c_aggregate_item_field_type_from_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @aggregate_item_field_type_from_name(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @is_aggregate_type(i32* %7)
  %9 = call i32 @assert(i32 %8)
  %10 = load i32*, i32** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @aggregate_item_field_index(i32* %10, i8* %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %20

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32* @aggregate_item_field_type_from_index(i32* %17, i32 %18)
  store i32* %19, i32** %3, align 8
  br label %20

20:                                               ; preds = %16, %15
  %21 = load i32*, i32** %3, align 8
  ret i32* %21
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @is_aggregate_type(i32*) #1

declare dso_local i32 @aggregate_item_field_index(i32*, i8*) #1

declare dso_local i32* @aggregate_item_field_type_from_index(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
